@@ -3,8 +3,8 @@ package com.bretth.osmosis.core.filter.v0_5;
 import java.io.File;
 import java.util.Map;
 
+import com.bretth.osmosis.core.filter.common.IdTrackerType;
 import com.bretth.osmosis.core.pipeline.common.TaskManager;
-import com.bretth.osmosis.core.pipeline.common.TaskManagerFactory;
 import com.bretth.osmosis.core.pipeline.v0_5.SinkSourceManager;
 
 
@@ -13,7 +13,7 @@ import com.bretth.osmosis.core.pipeline.v0_5.SinkSourceManager;
  * 
  * @author Brett Henderson
  */
-public class PolygonFilterFactory extends TaskManagerFactory {
+public class PolygonFilterFactory extends AreaFilterTaskManagerFactory {
 	private static final String ARG_FILE = "file";
 	private static final String DEFAULT_FILE = "polygon.txt";
 	private static final String ARG_COMPLETE_WAYS = "completeWays";
@@ -27,12 +27,14 @@ public class PolygonFilterFactory extends TaskManagerFactory {
 	 */
 	@Override
 	protected TaskManager createTaskManagerImpl(String taskId, Map<String, String> taskArgs, Map<String, String> pipeArgs) {
+		IdTrackerType idTrackerType;
 		String fileName;
 		File file;
 		boolean completeWays;
 		boolean completeRelations;
 		
 		// Get the task arguments.
+		idTrackerType = getIdTrackerType(taskId, taskArgs);
 		fileName = getStringArgument(taskId, taskArgs, ARG_FILE, DEFAULT_FILE);
 		completeWays = getBooleanArgument(taskId, taskArgs, ARG_COMPLETE_WAYS, DEFAULT_COMPLETE_WAYS);
 		completeRelations = getBooleanArgument(taskId, taskArgs, ARG_COMPLETE_RELATIONS, DEFAULT_COMPLETE_RELATIONS);
@@ -42,7 +44,7 @@ public class PolygonFilterFactory extends TaskManagerFactory {
 		
 		return new SinkSourceManager(
 			taskId,
-			new PolygonFilter(file, completeWays, completeRelations),
+			new PolygonFilter(idTrackerType, file, completeWays, completeRelations),
 			pipeArgs
 		);
 	}
